Fix: width on smaller screens
Fixed width to smaller screens, since there was
a blank space on the right side that wasn´t
supposed to be there. fix width a media quiere
style and `width: 95vw;`

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -227,11 +227,14 @@ header {
     }
 }
 
-@media screen and (max-width: 769px) {
+@media screen and (max-width: 800px) {
     .right-section {
         display: none;
     } 
     .card-text {
         font-size: 10px;
+    }
+    .fullview-small {
+        width: 95vw;
     }
 }
